--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta property="og:description" content="Interactive Terminal Portfolio of a Full Stack Developer" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="google-site-verification" content="PAUOcpzc6CE5d86Tbv7MXqIndu2SYknMWrLNeDVfJ5E" />
     
     
   </head>
