update meta tag

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Niccolo Portfolio - Full Stack Developer" />
+    <meta property="og:title" content="Niccolo Maffioli Portfolio - Full Stack Developer" />
     <meta property="og:description" content="Interactive Terminal Portfolio of a Full Stack Developer" />
     <meta property="og:type" content="website" />
     <meta name="google-site-verification" content="PAUOcpzc6CE5d86Tbv7MXqIndu2SYknMWrLNeDVfJ5E" />
