feat add manifest for SEO

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Terminal Portfolio - Full Stack Developer</title>
     <meta name="description" content="Interactive Terminal Portfolio of a Full Stack Developer" />
     <meta name="author" content="Full Stack Developer" />
-    <link rel="shortcut icon" href="public/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="public/favicon.png" type="image/x-icon">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+    <link rel="manifest" href="public/manifest.json">
 
     <meta property="og:title" content="Niccolo Maffioli Portfolio - Full Stack Developer" />
     <meta property="og:description" content="Interactive Terminal Portfolio of a Full Stack Developer" />
