--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Terminal Portfolio - Full Stack Developer</title>
     <meta name="description" content="Interactive Terminal Portfolio of a Full Stack Developer" />
     <meta name="author" content="Niccolò Maffioli" />
-    <link rel="shortcut icon" href="public/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
