--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       rel="stylesheet"
     />
     <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" href="/favicon.ico?v=2" />
 
     <meta
       property="og:title"
