update manifest and index for CEO

--- a/index.html
+++ b/index.html
@@ -10,22 +10,27 @@
     />
     <meta name="theme-color" content="#0d1117" />
     <meta name="author" content="Niccolò Maffioli" />
-    <link rel="icon" type="image/x-icon" sizes="32x32" href="/favicon.ico" />
-    <link rel="icon" type="image/x-icon" sizes="16x16" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/favicon-512x512.png" />
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
       rel="stylesheet"
     />
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="icon" href="/favicon.ico?v=2" />
 
+    <!-- SEO + Social -->
     <meta
       property="og:title"
-      content="Niccolo Maffioli Portfolio - Full Stack Developer"
+      content="Niccolò Maffioli Portfolio - Full Stack Developer"
     />
     <meta
       property="og:description"
@@ -33,14 +38,14 @@
     />
     <meta property="og:type" content="website" />
     <meta
-      name="google-site-verification"
-      content="PAUOcpzc6CE5d86Tbv7MXqIndu2SYknMWrLNeDVfJ5E"
-    />
-    <meta
       property="og:image"
       content="https://niccolo.dev/src/images/immagine.png"
     />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="google-site-verification"
+      content="PAUOcpzc6CE5d86Tbv7MXqIndu2SYknMWrLNeDVfJ5E"
+    />
   </head>
 
   <body>
